# jmbot

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
config/: controller.yaml
launch/: jmbot.launch.py
scripts/: cartesian_controller.py  joint_controller.py  prueba.py  spacenav_controller.py
urdf/: model.urdf
urdf/meshes/: Base_base.stl  Base_base_1.stl  Hombro_pos.stl  Hombro_pos_bueno.stl  Hombro_pos_com.stl  Hombro_pos_com2.stl  Hombro_pos_com3.stl  Hombro_pos_com4.stl  Hombro_pos_prueba.stl  Muneca.stl  Pinza.stl  Pinza_base_cambio.stl  Pinza_base_prueba.stl  Pinza_cambio.stl  Pinza_sola.stl  UNION.stl  brazomedio.stl  brazomedio_.stl
